[package]
name = "civciv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = "0.26.1"
duckdb = { version = "0.9.2", features = ["bundled"] }
fakeit = "1.2.0"
unicode-width = "0.1.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
arrow = { version = "*", default-features = false, features = [
  "prettyprint",
  "csv",
] }
comfy-table = "7.1.0"
